--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Tic Tac Toe</title>
+        <title>Tic-Tac-Toe</title>
         <link href="styles/style.css" rel="stylesheet" type="text/css">
     </head>
     <body>
-
+        <div class="main-container">
+            <header class="header">Tic-Tac-Toe</header>
+            <section class="player-interface">
+                <h2>Player's Turn</h2>
+                <div class="gameboard-container"></div>
+                <button class="restart-button">Restart</button>
+            </section>
+        </div>
     <script src="scripts/main.js"></script>
     </body>
 </html>
