--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <meta charset="utf-8">
         <title>Tic-Tac-Toe</title>
         <link href="styles/style.css" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Varela+Round&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="main-container">
             <header class="header">Tic-Tac-Toe</header>
             <section class="player-interface">
                 <h2>Player's Turn</h2>
-                <div class="gameboard-container"></div>
+                <div id="gameboard" class="gameboard-container"></div>
                 <button class="restart-button">Restart</button>
             </section>
         </div>
