add functionality for restart button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <section class="player-interface">
                 <h2>Player's Turn</h2>
                 <div id="gameboard" class="gameboard-container"></div>
-                <button class="restart-button">Restart</button>
+                <button id="restart" class="restart-button">Restart</button>
             </section>
         </div>
     <script src="scripts/main.js"></script>
