--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="main-container">
             <header class="header">Tic-Tac-Toe</header>
             <section class="player-interface">
-                <h2>Player's Turn</h2>
+                <h2 id="player">Player 1's Turn: X</h2>
                 <div id="gameboard" class="gameboard-container"></div>
                 <button id="restart" class="restart-button">Restart</button>
             </section>
