--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <section class="player-interface">
                 <h2 id="player" class="player-name">Player 1's Turn: X</h2>
                 <div id="gameboard" class="gameboard-container"></div>
-                <button id="restart" class="restart-button">Restart</button>
+                <button id="restart" class="restart-button">RESTART</button>
             </section>
         </div>
     <script src="scripts/main.js"></script>
